# longest-word2

./: app.yaml  main.py  pyproject.toml  requirements.txt  wsgi.py
longest_word2/: game.py
static/: style.css
tests/: test_game.py
